src/objects/Part_Request_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <referenceTo>Part_Request_Header__c</referenceTo>
        <relationshipLabel>Part Request Details</relationshipLabel>
        <relationshipName>Part_Request_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inventory_Loc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Loc</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Part Request Details</relationshipLabel>
        <relationshipName>Part_Request_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please Specify</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Repair Only</fullName>
                </value>
                <value>
                    <fullName>Repair-Stock</fullName>
                </value>
                <value>
                    <fullName>WH-to-Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_By__c</fullName>
        <label>Required By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Site_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Part</label>
        <referenceTo>Site_Part__c</referenceTo>
        <relationshipLabel>Part Request Details</relationshipLabel>
        <relationshipName>Part_Request_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Part Request Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Detail Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Part Request Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Inventory_Location_check</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
  OR (
    ISPICKVAL(Request_Type__c, &apos;Repair-Stock&apos;),
    ISPICKVAL(Request_Type__c, &apos;WH-to-Site&apos;)
  ),
  ISBLANK(Inventory_Loc__c)
)</errorConditionFormula>
        <errorDisplayField>Inventory_Loc__c</errorDisplayField>
        <errorMessage>Please select an Inventory Location</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Request_type_check</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Request_Type__c, &apos;Please Specify&apos;)</errorConditionFormula>
        <errorDisplayField>Request_Type__c</errorDisplayField>
        <errorMessage>Please select a valid value.</errorMessage>
    </validationRules>
</CustomObject>